# Photobatch

./: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Photobatch.cpp  README.md  Utils.cpp  Utils.h  main.cpp  mainzao
Unittests/: CMakeLists.txt  TestArgumentParser.cpp
